# convolutional-neural-network

./: .gitignore  CMakeLists.txt  cnn  cnn.cpp  file2.txt  files.txt  main  main.cpp  run.sh
examples/: cnn.cpp  mainas.cpp
include/: NeuralNet.hpp
include/activations/: Activation.hpp  ReLU.hpp  ReLUActivationLayer.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
include/core/: Initializer.hpp  Layer.hpp  Loss.hpp  Model.hpp  Tensor.hpp
include/layers/: AveragePooling2D.hpp  Conv2D.hpp  Dense.hpp  Dropout.hpp  Flatten.hpp  MLP.hpp  MaxPooling2D.hpp  MinPooling2D.hpp  MultiHeadSelfAttention.hpp  PatchEmbedding.hpp  PositionalEncoding.hpp
include/metrics/: Metric.hpp
include/optimizers/: Adam.hpp  Optimizer.hpp  RMSProp.hpp  SGD.hpp
include/utils/: DatasetLoader.hpp  Logger.hpp
prueba/: hola.hpp  main  main.cpp  neuronal.hpp
src/: main.cpp
